--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -4,14 +4,15 @@
 *** xref:index.adoc#instructlab[How does this relate to InstructLab?]
 ** xref:index.adoc#getting_started[Getting started with InstructLab]
 *** xref:index.adoc#installation[Installing ilab]
+*** xref:index.adoc#configuration[Configuring ilab]
 *** xref:index.adoc#initialize[Initialize ilab]
 *** xref:index.adoc#download[Download the model]
 *** xref:index.adoc#serve[Serving the model]
 *** xref:index.adoc#chat[Chat with the model]
 ** xref:index.adoc#integrating_instructlab[Integrating AI into an Insurance Application]
 *** xref:index.adoc#using_parasol_application[Using the Parasol Application]
-*** xref:index.adoc#taxononmy[Understanding the Taxonomy]
-*** xref:index.adoc#synthetic_data[Generating Synthetic data]
-*** xref:index.adoc#training[Training and Serving the Model]
+*** xref:index.adoc#taxonomy[Understanding the Taxonomy]
+*** xref:index.adoc#sdg[Generating Synthetic data]
+** xref:index.adoc#changing_model[Enhancing a LLM with InstructLab]
 *** xref:index.adoc#verify[Verifying the Application]
 ** xref:index.adoc#conclusion[Conclusion]
