--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -476,7 +476,7 @@ document:
     - data.md
 ----
 
-. `**version**`: The version of the qna.yaml file, this is the format of the file used for SDG. The value must be the number 3.
+. `**version**`: The version of the qna.yaml file, this is the format of the file used for SDG (SDG = Synthetic Data Generation). The value must be the number 3.
 . `**created_by**`: Your GitHub username.
 . `**domain**`: Specify the category of the knowledge.
 . `**seed_examples**`: A collection of key/value entries.
