--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -553,6 +553,7 @@ Once the process completes and we have generated additional data, we can use the
 
 If you are curious to view the data generated, the SDG process creates a jsonl file located in the `/home/instruct/.local/share/instructlab/datasets` directory named knowledge_train_msgs[TIMESTAMP].jsonl
 
+TIP: JSONL files consist of multiple JSON objects, each on its own line.
 Feel free to explore. You must input your exact file name in the following command:
 
 [source,console]
