--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -582,7 +582,7 @@ In order to train the model, quit the serving model with kbd:[Ctrl+C]. We can be
 
 [source,console,role=execute,subs=attributes+]
 ----
-ilab model train --data-path  /home/instruct/.local/share/instructlab/datasets/ --pipeline simple --device cuda
+ilab model train --data-path  /home/instruct/.local/share/instructlab/datasets/ --pipeline simple --device cuda --gpus 1
 ----
 
 You would see the following output: 
@@ -610,6 +610,8 @@ Loading checkpoint shards: 100%|████████████████
 ----
 
 After the model is trained, it will be saved as a GGUF at `/home/instruct/.local/share/instructlab/checkpoints/ggml-model-f16.gguf`
+
+CONGRATULATIONS! You just trained a chatbot for Parasol insurance and will make every claims agent’s life a little better!
 
 === Chatting with the new model
 
@@ -675,8 +677,6 @@ How much does it cost to repair a flux capacitor?
 You should see something similar to the following (keep in mind that your output may look different due to the nature of large language models):
 
 image::parasol-new-response.webp[width=350]
-
-CONGRATULATIONS! You just trained a chatbot for Parasol insurance and will make every claims agent’s life a little better!
 
 [#conclusion]
 == Conclusion
